@@ -6,17 +6,15 @@ import com.lmg.crawler_qa_tester.mapper.CrawlDetailEntityMapper;
 import com.lmg.crawler_qa_tester.repository.CrawlDetailRepository;
 import com.lmg.crawler_qa_tester.repository.entity.CrawlDetailEntity;
 import com.lmg.crawler_qa_tester.util.WebDriverFactory;
+import com.microsoft.playwright.Browser;
 import lombok.extern.slf4j.Slf4j;
-import org.openqa.selenium.WebDriver;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.dao.DuplicateKeyException;
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.integration.annotation.ServiceActivator;
 import org.springframework.messaging.Message;
 import org.springframework.stereotype.Service;
 
-import java.net.URI;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -34,28 +32,43 @@ public class ConsumerService {
         String linkUrl = link.getBaseUrl() + link.getPath();
         log.info("Processing Link: {}", linkUrl);
 
-        WebDriver driver = WebDriverFactory.getProdWebDriver(linkUrl);
+        Browser browser = WebDriverFactory.getProdWebDriver(linkUrl);
 
         //TODO Page Status Validate
 
-        List<String> urls = pageService.processPage(driver);
+        List<String> urls = null;
+
+        try {
+            urls = pageService.processPage(browser, linkUrl);
+            link.setProcessFlag(LinkStatus.SUCCESS);
+            crawlDetailRepository.save(new CrawlDetailEntityMapper().fromLink(link));
+        } catch (Exception e) {
+            log.error("Error processing page", e);
+            link.setProcessFlag(LinkStatus.FATAL);
+            crawlDetailRepository.save(new CrawlDetailEntityMapper().fromLink(link));
+            return;
+        }
 
         List<CrawlDetailEntity> links =
-            urls.stream().filter(url ->
-                    (url.startsWith(link.getBaseUrl())
-                        && !url.substring(link.getBaseUrl().length()).isEmpty()))
-                .limit(10)
-                .map(url -> new CrawlDetailEntityMapper().fromLink(Link.builder()
-                    .crawlHeaderId(link.getCrawlHeaderId())
-                    .env(link.getEnv())
-                    .baseUrl(link.getBaseUrl())
-                    .path(url.substring(link.getBaseUrl().length()))
-                    .processFlag(LinkStatus.NOT_PROCESSED)
-                    .build())).collect(Collectors.toList());
+                urls.stream().filter(url -> (url.startsWith("/kw/en/")))
+                        .limit(5)
+                        .map(url -> new CrawlDetailEntityMapper().fromLink(Link.builder()
+                                .crawlHeaderId(link.getCrawlHeaderId())
+                                .env(link.getEnv())
+                                .baseUrl(link.getBaseUrl())
+                                .path(url)
+                                .processFlag(LinkStatus.NOT_PROCESSED)
+                                .build())).toList();
         log.info("Cur links size: {}", links.size());
-            crawlDetailRepository.saveAll(links);
 
-        driver.quit();
+        try {
+            crawlDetailRepository.saveAll(links);
+        } catch (DataIntegrityViolationException ignored) {
+        } catch (Exception e) {
+            log.error("Error saving links", e);
+        }
+
+        browser.close();
     }
 
     // TODO PRE PROD CONSUMER
